🌿 Introducing Kotlin related test framework